--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>orders_parser</finalName>
 	</build>
 
 
